Bug fix for issue #143. set the max width of the title and caption to the same width as the picture, this way it will overflow down instead of across the page

--- a/website/static/website/css/indproject.css
+++ b/website/static/website/css/indproject.css
@@ -39,11 +39,15 @@
 	text-overflow: ellipsis;
 	padding-top: 5px;
 	margin-bottom: 0px;
+	float: right;
+	width: 535px;
 }
 
 .header-visual-caption {
     margin-top: 0px;
     color: #7F7F7F;
+    float: right;
+    width: 535px;
 }
 
 
